--- a/style/27.css
+++ b/style/27.css
@@ -26,7 +26,10 @@ ul li a {
 
 }
 .dropdowns li a:hover{
-    color: black;
+    background: #000;
+    color: #ddd;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .social-media {
